TODO
* pymsiecf
  - add support for leak: Last cache synchronization date and time
* hash calculation: check what the preceding bytes could be
* use libfdata ?
* msiecfexport:
  - URL what about unknown timestamps
* code clean up
  - add initialize functions
  - rename item values to item value
  - change read values to match libwrc

Tests:
* add cache directory tests

File format
* implement MSIE 3 cache file formats ?
* access records not referred by hash table
  - flag if items are hashed

Performance improvement
* pre allocate item/directory array entries

Tools
* msiecfinfo
  - print cache directories
* msiecfexport
  - export to TSV ?
  - flexible output formatting
  - flexible date/time string formatting

In progress:
* record scan
  - flag entries in hash table as hashed

20140317
* see `git log' for more recent change log
* worked on setup.py

20140131
* 2014 update
* updated dependencies

20131015
* updated dependencies
* updated msvscpp files

20131008
* improved pymsiecf as integer functions

20130929
* worked on setup.py, largely for MSI builds

20120923
* updated msvscpp files

20120922
* updated dependencies

20120806
* fixes for building with stand-alone libuna and libbfio

20120805
* updated dependencies
* bug fix in pymsiecf file object libbfio glue code
* worked on tests

20120529
* updated dependencies

20120528
* worked on pymsiecf simple inheritance of leak, redirected and url items

20120425
* worked on hash calculation

20120423
* added resource file to msvscpp files

20120421
* worked on tests

20120417
* bug fix in record scan due to recent dependency update

20120416
* code clean up

20120414
* textual changes
* worked on tests
* updates and bug fixes in pymsiecf
* fixed codepage 1255 restriction

20120413
* updated dependencies

20120409
* fixed codepage 949 and 950 restriction

20120319
* updated dependencies

20130317
* Small updates

20130310
* worked on url item type support