@@ -1,4 +1,4 @@
-.Dd January 14, 2017
+.Dd January 15, 2017
 .Dt libmsiecf 3
 .Os libmsiecf
 .Sh NAME
@@ -81,11 +81,11 @@ File functions
 .Ft int
 .Fn libmsiecf_file_get_number_of_items "libmsiecf_file_t *file, int *number_of_items, libmsiecf_error_t **error"
 .Ft int
-.Fn libmsiecf_file_get_item "libmsiecf_file_t *file, int item_index, libmsiecf_item_t **item, libmsiecf_error_t **error"
+.Fn libmsiecf_file_get_item_by_index "libmsiecf_file_t *file, int item_index, libmsiecf_item_t **item, libmsiecf_error_t **error"
 .Ft int
 .Fn libmsiecf_file_get_number_of_recovered_items "libmsiecf_file_t *file, int *number_of_recovered_items, libmsiecf_error_t **error"
 .Ft int
-.Fn libmsiecf_file_get_recovered_item "libmsiecf_file_t *file, int recovered_item_index, libmsiecf_item_t **recovered_item, libmsiecf_error_t **error"
+.Fn libmsiecf_file_get_recovered_item_by_index "libmsiecf_file_t *file, int recovered_item_index, libmsiecf_item_t **recovered_item, libmsiecf_error_t **error"
 .Pp
 Available when compiled with wide character string support:
 .Ft int
