@@ -1772,7 +1772,7 @@ PyObject *pymsiecf_file_get_item_by_index(
 	}
 	Py_BEGIN_ALLOW_THREADS
 
-	result = libmsiecf_file_get_item(
+	result = libmsiecf_file_get_item_by_index(
 	          ( (pymsiecf_file_t *) pymsiecf_file )->file,
 	          item_index,
 	          &item,
